# calculator

./: .gitingore  .pypirc  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py  test_calculator.py
calculator/calculator/: __init__.py  calculator.py
calculator/test/: test_calculator.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
powerful_calculator/: __init__.py  powerful_calculator.py
test/: __init__.py  test_calculator.py
